refactor(conversion-request): add v2 route for conversions
add the multipart/form-data route as v2 route to api in order to be backwards compatible with the
unoconv-moodle plugin
