# src/routes/routes.ts
@@ -167,12 +167,10 @@ export function RegisterRoutes(app: express.Express) {
 	//  NOTE: If you do not see routes for all of your controllers in this file, then you might not have informed tsoa of where to look
 	//      Please look into the "controllerPathGlobs" config option described in the readme: https://github.com/lukeautry/tsoa
 	// ###########################################################################################################
-	app.post('/conversion',
+	app.post('/conversion/v2',
 		function(request: any, response: any, next: any) {
 			const args = {
 				request: { "in": "request", "name": "request", "required": true, "dataType": "object" },
-				requestBody: { "in": "body", "name": "requestBody", "ref": "IConversionRequestBody" },
-				isV2Request: { "in": "query", "name": "v2", "dataType": "boolean" },
 			};
 
 			// WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
@@ -188,6 +186,28 @@ export function RegisterRoutes(app: express.Express) {
 
 
 			const promise = controller.convertFile.apply(controller, validatedArgs as any);
+			promiseHandler(controller, promise, response, next);
+		});
+	// WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+	app.post('/conversion',
+		function(request: any, response: any, next: any) {
+			const args = {
+				requestBody: { "in": "body", "name": "requestBody", "required": true, "ref": "IConversionRequestBody" },
+			};
+
+			// WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+			let validatedArgs: any[] = [];
+			try {
+				validatedArgs = getValidatedArgs(args, request, response);
+			} catch (err) {
+				return next(err);
+			}
+
+			const controller = new ConversionController();
+
+
+			const promise = controller.convertFileLegacy.apply(controller, validatedArgs as any);
 			promiseHandler(controller, promise, response, next);
 		});
 	// WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
